# camellia

./: .gitignore  dune-project
examples/: README.md  arithmetic_proof.cam  compiler_demo.ml  complex.cam  comprehensive_demo.cam  debug_addition_constraint.ml  debug_demo.ml  debug_failing_test.ml  debug_missing_constant.ml  debug_r1cs_validation.ml  dune  edge_case_test.ml  error_demo.cam  error_demo.ml  error_test.cam  field_demo.ml  hash_preimage.cam  hash_preimage.camellia  hash_preimage_circuit.ml  hash_preimage_validation.ml  minimal.cam  r1cs_demo.ml  range_proof.cam  simple.cam  simple_correct.cam  syntax_showcase.cam  test_arithmetic.cam  test_arithmetic.camellia  test_lexer_demo.ml  validation_demo.ml  working_demo.cam
lib/: dune
lib/analysis/: analysis.ml  analysis_reporter.ml  analysis_types.ml  circuit_analyzer.ml  constraint_analyzer.ml  depth_analyzer.ml  dune  performance_analyzer.ml  security_analyzer.ml
lib/ast/: ast.ml  dune
lib/backend/: backend.ml  dune
lib/circuit/: circuit.ml  dune
lib/compiler/: compiler.ml  dune
lib/debug/: debug.ml  dune
lib/error/: dune  error.ml
lib/field/: dune  field.ml
lib/optimize/: algebraic_simplification.ml  constant_folding.ml  dead_code_elimination.ml  dune  optimize.ml  pass_interface.ml  pass_manager.ml  performance.ml  verification.ml
lib/output/: dune  output.ml
lib/parser/: dune  lexer.mll  parser.ml  parser.mly  tokens.ml
lib/r1cs/: dune  r1cs.ml
lib/typing/: circuit_validator.ml  dune  scope_checker.ml  semantic_error.ml  type_errors.ml  type_inference.ml  types.ml  typing.ml
lib/visualization/: circuit_graph_builder.ml  constraint_inspector.ml  dune  graphviz_renderer.ml  interactive_debugger.ml  performance_profiler.ml  visualization.ml  visualization_types.ml
test/: dune  test_ast.ml  test_camellia.ml  test_cli_integration.ml  test_compiler.ml  test_constant_reuse.ml  test_debug.ml  test_error.ml  test_field.ml  test_lexer_simple.ml  test_optimization.ml  test_output.ml  test_parser_comprehensive.ml  test_parser_errors.ml  test_parser_menhir.ml  test_r1cs.ml  test_syntax_integration.ml  test_typing.ml
