(test
 (name test_camellia)
 (libraries ast parser compiler circuit backend alcotest))

(test
 (name test_ast)
 (libraries ast alcotest))

(test
 (name test_error)
 (libraries error alcotest))

(test
 (name test_parser_errors)
 (libraries parser error alcotest))

(test
 (name test_field)
 (libraries field error alcotest))

(test
 (name test_debug)
 (libraries debug ast error unix alcotest))

(test
 (name test_r1cs)
 (libraries r1cs field error alcotest))

(test
 (name test_compiler)
 (libraries compiler r1cs field error debug ast alcotest))

(test
 (name test_constant_reuse)
 (libraries compiler r1cs field error debug ast alcotest))

(test
 (name test_output)
 (libraries output r1cs compiler field error debug ast alcotest unix yojson str))

(test
 (name test_cli_integration)
 (libraries alcotest unix yojson str))